# app_framework

./: BUILD.gn  OAT.xml  README-EN.md  README.md
ability/ability_runtime/cross_platform/frameworks/js/napi/: BUILD.gn  ability.abc  ability_context.abc  ability_stage.abc  ability_stage_context.abc  context.abc
ability/ability_runtime/cross_platform/interfaces/inner_api/bundle/: BUILD.gn  ability_info.h  appexecfwk_errors.h  application_info.h  bundle_info.h  hap_module_info.h  module_info.h
ability/ability_runtime/cross_platform/interfaces/inner_api/configuration/: BUILD.gn  configuration.h
ability/ability_runtime/cross_platform/interfaces/inner_api/error/: BUILD.gn  ability_business_error.h  ability_manager_errors.h  ability_runtime_error_util.h  errors.h
arkui/uicontent/: BUILD.gn  component_info.h  declarative_module_preloader.cpp  declarative_module_preloader.h  ui_content.cpp  ui_content.h
graphic_2d/android/: BUILD.gn  native_buffer_utils.cpp  native_buffer_utils.h  render_context.cpp  render_context_egl.cpp  rs_accessibility.cpp  rs_ashmem_helper.cpp  rs_frame_report.cpp  rs_marshalling_helper.cpp  rs_render_pipeline_client.cpp  rs_render_service_client.cpp  rs_surface_android.cpp  rs_surface_android.h  rs_surface_frame_android.cpp  rs_surface_frame_android.h  rs_surface_ohos_converter.cpp  rs_surface_texture_android.cpp  rs_surface_texture_android.h  rs_system_properties.cpp  rs_trace_android.cpp  rs_trace_android.h  rs_vsync_client_android.cpp  rs_vsync_client_android.h  rs_vulkan_context.cpp  rs_vulkan_context.h  scene_board_judgement.cpp  scene_board_judgement.h
graphic_2d/android/gl/: rs_surface_android_gl.cpp  rs_surface_android_gl.h  rs_surface_frame_android_gl.cpp  rs_surface_frame_android_gl.h  rs_surface_texture_android_gl.cpp  rs_surface_texture_android_gl.h
graphic_2d/android/log/hilog/: log.h  log_aosp.cpp
graphic_2d/android/vulkan/: render_context_vk.cpp  rs_surface_android_vulkan.cpp  rs_surface_android_vulkan.h  rs_surface_frame_android_vulkan.cpp  rs_surface_frame_android_vulkan.h  rs_surface_swap_chain.cpp  rs_surface_swap_chain.h  rs_surface_texture_android_vulkan.cpp  rs_surface_texture_android_vulkan.h
graphic_2d/ios/: BUILD.gn  render_context.cpp  render_context.mm  render_context_ios.h  rs_accessibility.cpp  rs_ashmem_helper.cpp  rs_frame_report.cpp  rs_marshalling_helper.cpp  rs_render_pipeline_client.cpp  rs_render_service_client.mm  rs_surface_cpu.h  rs_surface_cpu.mm  rs_surface_frame_ios.cpp  rs_surface_frame_ios.h  rs_surface_gpu.h  rs_surface_gpu.mm  rs_surface_ohos_converter.cpp  rs_surface_platform_texture_ios.h  rs_surface_platform_texture_ios.mm  rs_surface_texture_ios.h  rs_surface_texture_ios.mm  rs_system_properties.cpp  rs_vsync_client_ios.h  rs_vsync_client_ios.mm
graphic_2d/ios/log/hilog/: log_ios.mm
graphic_surface/surface/: BUILD.gn
graphic_surface/surface/include/cross_platform/: external_window.h  surface_utils.h
graphic_surface/surface/src/cross_platform/: native_window.cpp  surface_utils.cpp
hiviewdfx/hiappevent/js/napi/: BUILD.gn
hiviewdfx/hiappevent/js/napi/include/: napi_app_event_watcher.h  napi_util.h
hiviewdfx/hiappevent/js/napi/src/: napi_app_event_watcher.cpp  napi_util.cpp
hiviewdfx/hiappevent/native/: BUILD.gn
hiviewdfx/hiappevent/native/include/: hiappevent_base.h  hiappevent_clean.h  hiappevent_config.h  hiappevent_userinfo.h  hiappevent_verify.h  hiappevent_write.h
hiviewdfx/hiappevent/native/include/clean/: app_event_cleaner.h  app_event_memory_cleaner.h
hiviewdfx/hiappevent/native/include/observer/: app_event_cache_common.h  app_event_handler.h  app_event_observer.h  app_event_observer_mgr.h  app_event_store.h  app_event_watcher.h  hiappevent_common.h
hiviewdfx/hiappevent/native/include/utility/: app_event.h  base_type.h  time_util.h
hiviewdfx/hiappevent/native/src/: hiappevent_base.cpp  hiappevent_clean.cpp  hiappevent_config.cpp  hiappevent_userinfo.cpp  hiappevent_verify.cpp  hiappevent_write.cpp
hiviewdfx/hiappevent/native/src/clean/: app_event_memory_cleaner.cpp
hiviewdfx/hiappevent/native/src/observer/: app_event_handler.cpp  app_event_observer.cpp  app_event_observer_mgr.cpp  app_event_store.cpp  app_event_watcher.cpp
hiviewdfx/hiappevent/native/src/utility/: time_util.cpp
hiviewdfx/hilog/: BUILD.gn
hiviewdfx/hilog/base/: hilog_base.c
hiviewdfx/hilog/include/: hilog_base.h
hiviewdfx/hilog/include/hilog_base/: log_base.h
hiviewdfx/hilog/vsnprintf/: output_p.inl  vsnprintf_s_p.c
hiviewdfx/hilog/vsnprintf/include/: vsnprintf_s_p.h
icu_data/: BUILD.gn
icu_data/android/: build_icu_data.sh
icu_data/filters/: data_filter.json
icu_data/filters/data/brkitr/: root.txt
icu_data/ios/: build_icu_data.sh  build_icu_data_for_simulator.sh
icu_data/scripts/: pkgdata.sh
resource_management/: BUILD.gn
resource_management/interfaces/js/innerkits/core/: BUILD.gn  libresmgr_napi_core.versionscript
resource_management/interfaces/js/kits/: BUILD.gn
resource_management/interfaces/js/kits/src/: resource_manager_napi.cpp
resource_management/interfaces/native/resource/: BUILD.gn  librawfile.ndk.json
window_manager/: window_manager.gni
window_manager/dm/: BUILD.gn
window_manager/dm/include/: display.h  display_manager.h
window_manager/dm/src/: display.cpp  display_manager.cpp
window_manager/interfaces/innerkits/dm/: dm_common.h
window_manager/interfaces/innerkits/wm/: window_interface.h  window_option.h  window_stage.h  wm_common.h
window_manager/interfaces/kits/napi/display_runtime/: BUILD.gn  display_manager_module.cpp  js_display.cpp  js_display.h  js_display_listener.cpp  js_display_listener.h  js_display_manager.cpp  js_display_manager.h
window_manager/interfaces/kits/napi/window_runtime/: BUILD.gn
window_manager/utils/: BUILD.gn
window_manager/utils/include/: class_var_definition.h  future.h  singleton_container.h  singleton_delegator.h  window_hilog.h  wm_single_instance.h
window_manager/utils/src/: singleton_container.cpp
window_manager/wm/: BUILD.gn
window_manager/wm/src/: window_option.cpp  window_stage.cpp
(+314 files in other folders)
