# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/global/resource_management/resmgr.gni")
import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")

config("resmgr_config") {
  include_dirs = [
    "//base/global/resource_management/frameworks/resmgr/include",
    "//third_party/zlib/contrib/minizip",
    "//base/global/resource_management/interfaces/inner_api/include",
    "//third_party/bounds_checking_function/include",
  ]

  if (resource_management_support_icu) {
    include_dirs += [
      "//third_party/icu/icu4c/source",
      "//third_party/icu/icu4c/source/common",
      "//third_party/icu/icu4c/source/i18n",
    ]
    defines = [ "SUPPORT_GRAPHICS" ]
  }
}

manager_sources = [
  "//base/global/resource_management/frameworks/resmgr/src/hap_manager.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/hap_parser.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/hap_parser_v1.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/hap_parser_v2.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/hap_resource.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/hap_resource_manager.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/hap_resource_v1.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/hap_resource_v2.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/locale_matcher.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/mmap_file.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/res_config_impl.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/res_desc.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/res_locale.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/resource_manager.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/resource_manager_impl.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/system_resource_manager.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/theme_pack_config.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/theme_pack_manager.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/theme_pack_resource.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/utils/psue_manager.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/utils/string_utils.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/utils/utils.cpp",
]

config("resmgr_public_config") {
  visibility = [ ":*" ]

  include_dirs =
      [ "//base/global/resource_management/interfaces/inner_api/include" ]

  if (resource_management_support_icu) {
    include_dirs += [ "//third_party/icu/icu4c/source/common" ]
    defines = [ "SUPPORT_GRAPHICS" ]
  }
}

ohos_source_set("global_resmgr") {
  defines = [
    "__ARKUI_CROSS__",
    "CONFIG_HILOG",
  ]
  cflags = [
    "-std=c++17",
    "-Wno-ignored-attributes",
  ]

  sources = manager_sources

  configs = [ ":resmgr_config" ]

  public_configs = [
    ":resmgr_public_config",
    "//third_party/cJSON:cJSON_config",
  ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog_${target_os}",
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/zlib:libz",
  ]

  if (resource_management_support_icu) {
    deps += [ "//third_party/icu/icu4c:static_icui18n" ]
  }

  if (target_os == "android") {
    libs = [ "log" ]
  }

  subsystem_name = "global"
  part_name = "resource_management"
}
