# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")

config("uicontent_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${ace_napi}",
    "${ace_root}",
    "${ace_root}/interfaces/frameworks",
    "${ace_root}/interfaces/inner_api/ace",
    "//foundation/graphic/graphic_2d/rosen/modules/2d_engine",
    "//arkcompiler/ets_runtime",
    "//arkcompiler/runtime_core",
    "//third_party/libuv/include",
    "$root_out_dir/arkui/framework",
    "//third_party/node/src",
    "//arkcompiler/runtime_core/common_interfaces",
  ]
}

ohos_source_set("ace_uicontent_interface") {
  configs = [
    "$ace_root:ace_config",
    "//foundation/appframework/ability/ability_runtime/cross_platform/interfaces/kits/native/appkit:appkit_native_config",
    "//foundation/appframework/ability/ability_runtime/cross_platform/interfaces/kits/native/ability:abilitykit_native_config",
  ]
  public_configs = [ ":uicontent_config" ]
  if (current_os == "ios") {
    defines = [ "IOS_PLATFORM" ]
  }
  sources = [
    "//foundation/appframework/arkui/uicontent/declarative_module_preloader.cpp",
    "//foundation/appframework/arkui/uicontent/ui_content.cpp",
  ]

  deps = [ "$ace_root/frameworks/core/components/theme:build_theme_code" ]
}
