# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/graphic/graphic_surface/graphic_surface_config.gni")

config("arkuix_surface_public_config") {
  include_dirs = [
    "$graphic_surface_root/interfaces/inner_api/common",
    "//foundation/appframework/graphic_surface/surface/include",
  ]
}

ohos_source_set("arkuix_surface") {
  sources = [
    "src/cross_platform/native_window.cpp",
    "src/cross_platform/surface_utils.cpp",
  ]

  public_configs = [ ":arkuix_surface_public_config" ]
}
