# Copyright (c) 2022-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")

config("hiviewdfx_base_pub_cfg") {
  visibility = [ "*:*" ]
  include_dirs = [
    "include",
    "vsnprintf/include",
  ]
}

config("hiviewdfx_base_config") {
  visibility = [ "*:*" ]
  include_dirs = [ "include" ]
}
# build static
ohos_static_library("hiviewdfx_hilog_base") {
  public_configs = [ ":hiviewdfx_base_pub_cfg" ]

  include_dirs = [
    "vsnprintf/include",
    "include",
  ]

  vsnprintf_sources = [
    "vsnprintf/vsnprintf_s_p.c",
    "vsnprintf/vsprintf_p.c",
  ]

  sources = [ "base/hilog_base.c" ]
  sources += vsnprintf_sources
  defines = [
    "__RECV_MSG_WITH_UCRED_",
    "HILOG_PROHIBIT_ALLOCATION",
  ]
  configs = [ ":hiviewdfx_base_config" ]
  deps = ["//third_party/bounds_checking_function:libsec_static"]
}
