# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")

config("hiviewdfx_base_pub_cfg") {
  visibility = [ "*:*" ]
  include_dirs = [
    "vsnprintf/include",
  ]
}

config("hiviewdfx_base_config") {
  visibility = [ "*:*" ]
}
# build static
ohos_static_library("hiviewdfx_hilog_base") {
  public_configs = [ ":hiviewdfx_base_pub_cfg" ]

  include_dirs = [
    "vsnprintf/include",
  ]

  sources = [
    "vsnprintf/vsnprintf_s_p.c",
  ]

  defines = [
  ]

  if (target_os == "android" || target_os == "ios") {
    defines += [ "SECUREC_COMPATIBLE_LINUX_FORMAT" ]
  }
  configs = [ ":hiviewdfx_base_config" ]
  deps = ["//third_party/bounds_checking_function:libsec_static"]
}
