# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/appframework/window_manager/window_manager.gni")

config("window_manager_utils_config") {
}

template("window_manager_utils") {
  forward_variables_from(invoker, "*")

  ohos_source_set(target_name) {
    subsystem_name = window_manager_subsystem_name
    part_name = window_manager_part_name
    configs = [
      ":window_manager_utils_config",
      "//foundation/appframework/ability/ability_runtime/cross_platform/interfaces/inner_api/hilog:ability_cross_platform_hilog_config",
    ]
    defines = []
    if (target_cpu == "arm64") {
      defines += [ "_ARM64_" ]
    }

    include_dirs = [
      "//foundation/arkui/ace_engine/interfaces/inner_api/ace_kit/include",
      "${app_framework_window_manager_path}/utils/include",
      "//commonlibrary/c_utils/base/include",
    ]

    sources = [
      "${app_framework_window_manager_path}/utils/src/singleton_container.cpp",
    ]
  }
}

window_manager_utils("wm_utils") {
}
