# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")
config("native_hiviewdfx_hiappevent_config") {
  visibility = [ "*:*" ]
  include_dirs = [
    "//foundation/appframework/hiviewdfx/hiappevent/native/include",
    "//foundation/appframework/hiviewdfx/hiappevent/native/include/observer",
    "//foundation/appframework/hiviewdfx/hiappevent/native/include/utility",
    "//foundation/appframework/hiviewdfx/hiappevent/native/include/clean",
    "//foundation/appframework/hiviewdfx/hiappevent/js/napi/include",
    "//commonlibrary/c_utils/base/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//foundation/arkui/napi/interfaces/kits",
    "//foundation/appframework/ability/ability_runtime/cross_platform/interfaces/kits/native/appkit",
  ]
}

ohos_source_set("native_hiviewdfx_hiappevent") {
  public_configs = [ ":native_hiviewdfx_hiappevent_config" ]
  include_dirs = [
    "//foundation/appframework/ability/ability_runtime/cross_platform/interfaces/kits/native/appkit",
    "//foundation/appframework/ability/ability_runtime/cross_platform/frameworks/native/base/bundle_parser/include",
    "//foundation/appframework/ability/ability_runtime/cross_platform/frameworks/native/base/event_handler/include",
    "//foundation/appframework/ability/ability_runtime/cross_platform/interfaces/inner_api/bundle",
    "//foundation/appframework/ability/ability_runtime/cross_platform/interfaces/inner_api/hilog",
    "//foundation/arkui/ace_engine/frameworks",
    "//foundation/arkui/ace_engine/interfaces/inner_api/ace_kit/include",
    "//third_party/json/include",
    "//foundation/appframework/ability/ability_runtime/cross_platform/interfaces/inner_api/configuration",
    "//base/global/resource_management/interfaces/inner_api/include",
    "//foundation/appframework/ability/ability_runtime/cross_platform/interfaces/inner_api/app_manager",
  ]

  sources = [
    "//foundation/appframework/hiviewdfx/hiappevent/native/src/clean/app_event_memory_cleaner.cpp",
    "//foundation/appframework/hiviewdfx/hiappevent/native/src/hiappevent_base.cpp",
    "//foundation/appframework/hiviewdfx/hiappevent/native/src/hiappevent_clean.cpp",
    "//foundation/appframework/hiviewdfx/hiappevent/native/src/hiappevent_config.cpp",
    "//foundation/appframework/hiviewdfx/hiappevent/native/src/hiappevent_userinfo.cpp",
    "//foundation/appframework/hiviewdfx/hiappevent/native/src/hiappevent_verify.cpp",
    "//foundation/appframework/hiviewdfx/hiappevent/native/src/hiappevent_write.cpp",
    "//foundation/appframework/hiviewdfx/hiappevent/native/src/observer/app_event_handler.cpp",
    "//foundation/appframework/hiviewdfx/hiappevent/native/src/observer/app_event_observer.cpp",
    "//foundation/appframework/hiviewdfx/hiappevent/native/src/observer/app_event_observer_mgr.cpp",
    "//foundation/appframework/hiviewdfx/hiappevent/native/src/observer/app_event_store.cpp",
    "//foundation/appframework/hiviewdfx/hiappevent/native/src/observer/app_event_watcher.cpp",
    "//foundation/appframework/hiviewdfx/hiappevent/native/src/utility/time_util.cpp",
  ]
  if (target_os == "ios") {
    defines = [ "IOS_PLATFORM" ]
  }

  subsystem_name = "hiappevent_native"
  part_name = "hiviewdfx_hiappevent"
}
