# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("resourcemanager_config") {
  configs = [
    "//foundation/appframework/resource_management:resmgr_public_config",
    "//foundation/appframework/resource_management/interfaces/js/innerkits/core:resmgr_napi_core_public_config",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog_pub_config",
    "//foundation/arkui/napi:ace_napi_config",
  ]
}

ohos_source_set("resourcemanager") {
  sources = [ "src/resource_manager_napi.cpp" ]

  configs = [ ":resourcemanager_config" ]

  defines = [ "__ARKUI_CROSS__" ]

  subsystem_name = "global"
  part_name = "resource_manager"
}
